# Kurs_uzbekistan

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  browser_pool.py  cache.py  collector_stats.py  config.py  db.py  health.py  install-service.sh  kurs-uz-bot.service  main.py  models.py  pyproject.toml  repos.py  requirements.txt
_archive_kubot/: .env.example  TESTING.md  docker-compose.yml  pyproject.toml  requirements.txt
_archive_kubot/alembic/: env.py
_archive_kubot/api/: Dockerfile  main.py  requirements.txt
_archive_kubot/bot/: Dockerfile  main.py  requirements.txt  scheduler.py
_archive_kubot/bot/handlers/: main.py  rates.py
_archive_kubot/bot/middlewares/: __init__.py  error_handler.py  i18n.py
_archive_kubot/bot/tasks/: digest.py
_archive_kubot/bot/utils/: paging.py
_archive_kubot/collectors/: Dockerfile  cbu.py  commercial_banks.py  ipoteka.py  kapitalbank.py  kapitalbank_standalone.py  main.py  requirements.txt  tbc.py  turonbank.py
_archive_kubot/core/: config.py  monitoring.py  rates_service.py  repos.py  validation.py
_archive_kubot/infrastructure/: db.py
_archive_kubot/locales/en/: messages.ftl
_archive_kubot/scripts/: populate_banks.py  send_digest_once.py
_archive_kubot/tests/: conftest.py
_archive_kubot/twa/: Dockerfile  next.config.js  package.json  tsconfig.json
_archive_kubot/twa/app/: globals.css
_archive_kubot/twa/i18n/: uz_cy.json
alembic/: env.py
bot/: digest.py  handlers.py  keyboards.py  middlewares.py
collectors/: aab.py  agrobank.py  aloqabank.py  base.py  cbu.py  hamkorbank.py  infinbank.py  (+16 more)
(+102 files in other folders)
