[project]
name = "kurs_uz_bot"
version = "1.0.0"
description = "Telegram bot for Uzbekistan bank currency exchange rates"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
