[project]
name = "kubot"
version = "1.0.0"
description = "Uzbekistan Currency Exchange Telegram Bot"
requires-python = ">=3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py312"
line-length = 120
